{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 147,
  "lineage": "c7d8202d-902a-1d86-2280-0ab1133c95e9",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:680885972474:instance/i-045d6037e151e3ec7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045d6037e151e3ec7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a68b53f37325373",
            "private_dns": "ip-10-0-14-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.14.48",
            "public_dns": "ec2-3-87-251-172.compute-1.amazonaws.com",
            "public_ip": "3.87.251.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d7fd469c50d01235",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005c3e9a5994d8f19",
            "tags": {
              "Name": "FCJ-Management"
            },
            "tags_all": {
              "Name": "FCJ-Management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011e9d2b05b3604da"
            ]
          },
          "dependencies": [
            "module.compute.module.database.aws_db_instance.this",
            "module.compute.module.database.aws_db_subnet_group.this",
            "module.compute.module.database.module.network.aws_security_group.for_rds_instance",
            "module.compute.module.database.module.network.aws_subnet.public",
            "module.compute.module.database.module.network.aws_vpc.main",
            "module.compute.module.database.module.network.data.aws_availability_zones.available",
            "module.compute.module.network.aws_security_group.for_rds_instance",
            "module.compute.module.network.aws_subnet.public",
            "module.compute.module.network.aws_vpc.main",
            "module.compute.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:internet-gateway/igw-073b0babde48c54a0",
            "id": "igw-073b0babde48c54a0",
            "owner_id": "680885972474",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0d7204cbb3ed25b9b"
          },
          "dependencies": [
            "module.compute.module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:route-table/rtb-01aaaa187422afff5",
            "id": "rtb-01aaaa187422afff5",
            "owner_id": "680885972474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073b0babde48c54a0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7204cbb3ed25b9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.database.module.network.aws_internet_gateway.main",
            "module.compute.module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9761e923c6598f8",
            "route_table_id": "rtb-01aaaa187422afff5",
            "subnet_id": "subnet-02fbfa131bca46e42"
          },
          "dependencies": [
            "module.compute.module.database.module.network.aws_internet_gateway.main",
            "module.compute.module.database.module.network.aws_route_table.public",
            "module.compute.module.database.module.network.aws_subnet.public",
            "module.compute.module.database.module.network.aws_vpc.main",
            "module.compute.module.database.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7e0014cc40d6858",
            "route_table_id": "rtb-01aaaa187422afff5",
            "subnet_id": "subnet-054f847cbc8e00f09"
          },
          "dependencies": [
            "module.compute.module.database.module.network.aws_internet_gateway.main",
            "module.compute.module.database.module.network.aws_route_table.public",
            "module.compute.module.database.module.network.aws_subnet.public",
            "module.compute.module.database.module.network.aws_vpc.main",
            "module.compute.module.database.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:security-group/sg-075a77948b873f07c",
            "description": "Security Group for FCJ Management",
            "egress": [],
            "id": "sg-075a77948b873f07c",
            "ingress": [],
            "name": "FCJ-Management-SG",
            "name_prefix": "",
            "owner_id": "680885972474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "for_ec2_instance"
            },
            "tags_all": {
              "Name": "for_ec2_instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7204cbb3ed25b9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_rds_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:security-group/sg-043087e07e93fd9ce",
            "description": "Security Group for DB instance",
            "egress": [],
            "id": "sg-043087e07e93fd9ce",
            "ingress": [],
            "name": "FCJ-Management-DB-SG",
            "name_prefix": "",
            "owner_id": "680885972474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "for_rds_instance"
            },
            "tags_all": {
              "Name": "for_rds_instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7204cbb3ed25b9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_custom_tpc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5000,
            "id": "sgrule-305281573",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075a77948b873f07c",
            "security_group_rule_id": "sgr-01a49ac780626a225",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.database.module.network.aws_security_group.for_ec2_instance",
            "module.compute.module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_db_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1432939494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-043087e07e93fd9ce",
            "security_group_rule_id": "sgr-0bd950f38657b7992",
            "self": false,
            "source_security_group_id": "sg-075a77948b873f07c",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.database.module.network.aws_security_group.for_ec2_instance",
            "module.compute.module.database.module.network.aws_security_group.for_rds_instance",
            "module.compute.module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3820574497",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075a77948b873f07c",
            "security_group_rule_id": "sgr-059cefb1bf1e3d367",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.database.module.network.aws_security_group.for_ec2_instance",
            "module.compute.module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3753070847",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075a77948b873f07c",
            "security_group_rule_id": "sgr-0606eb03ea7f201ab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.database.module.network.aws_security_group.for_ec2_instance",
            "module.compute.module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "27.3.24.191/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1413134631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075a77948b873f07c",
            "security_group_rule_id": "sgr-09f2686e3120f7996",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.database.module.network.aws_security_group.for_ec2_instance",
            "module.compute.module.database.module.network.aws_vpc.main",
            "module.compute.module.database.module.network.data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-07e75b21b452f9df4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e75b21b452f9df4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d7204cbb3ed25b9b"
          },
          "dependencies": [
            "module.compute.module.database.module.network.aws_vpc.main",
            "module.compute.module.database.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-073bde2e1c4ae25e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073bde2e1c4ae25e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d7204cbb3ed25b9b"
          },
          "dependencies": [
            "module.compute.module.database.module.network.aws_vpc.main",
            "module.compute.module.database.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-02fbfa131bca46e42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fbfa131bca46e42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d7204cbb3ed25b9b"
          },
          "dependencies": [
            "module.compute.module.database.module.network.aws_vpc.main",
            "module.compute.module.database.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-054f847cbc8e00f09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054f847cbc8e00f09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d7204cbb3ed25b9b"
          },
          "dependencies": [
            "module.compute.module.database.module.network.aws_vpc.main",
            "module.compute.module.database.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.database.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:vpc/vpc-0d7204cbb3ed25b9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a477b2ca3553c139",
            "default_route_table_id": "rtb-0336644270dda6cb5",
            "default_security_group_id": "sg-0efeea1a6aadd0f8a",
            "dhcp_options_id": "dopt-02eda96ab8a8b4350",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d7204cbb3ed25b9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0336644270dda6cb5",
            "owner_id": "680885972474",
            "tags": {
              "Name": "container-vpc"
            },
            "tags_all": {
              "Name": "container-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:internet-gateway/igw-0cc837edb9146826c",
            "id": "igw-0cc837edb9146826c",
            "owner_id": "680885972474",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-010b76f49cd2e1a27"
          },
          "dependencies": [
            "module.compute.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:route-table/rtb-0c1ac086a160f45a7",
            "id": "rtb-0c1ac086a160f45a7",
            "owner_id": "680885972474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc837edb9146826c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-010b76f49cd2e1a27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_internet_gateway.main",
            "module.compute.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038af56a4012e8bbc",
            "route_table_id": "rtb-0c1ac086a160f45a7",
            "subnet_id": "subnet-005c3e9a5994d8f19"
          },
          "dependencies": [
            "module.compute.module.network.aws_internet_gateway.main",
            "module.compute.module.network.aws_route_table.public",
            "module.compute.module.network.aws_subnet.public",
            "module.compute.module.network.aws_vpc.main",
            "module.compute.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a50452401455e364",
            "route_table_id": "rtb-0c1ac086a160f45a7",
            "subnet_id": "subnet-05013fb3c265e483d"
          },
          "dependencies": [
            "module.compute.module.network.aws_internet_gateway.main",
            "module.compute.module.network.aws_route_table.public",
            "module.compute.module.network.aws_subnet.public",
            "module.compute.module.network.aws_vpc.main",
            "module.compute.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:security-group/sg-0ea9c04a8d1a56eb6",
            "description": "Security Group for FCJ Management",
            "egress": [],
            "id": "sg-0ea9c04a8d1a56eb6",
            "ingress": [],
            "name": "FCJ-Management-SG",
            "name_prefix": "",
            "owner_id": "680885972474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "for_ec2_instance"
            },
            "tags_all": {
              "Name": "for_ec2_instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-010b76f49cd2e1a27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_rds_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:security-group/sg-011e9d2b05b3604da",
            "description": "Security Group for DB instance",
            "egress": [],
            "id": "sg-011e9d2b05b3604da",
            "ingress": [],
            "name": "FCJ-Management-DB-SG",
            "name_prefix": "",
            "owner_id": "680885972474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "for_rds_instance"
            },
            "tags_all": {
              "Name": "for_rds_instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-010b76f49cd2e1a27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_custom_tpc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5000,
            "id": "sgrule-1006812855",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ea9c04a8d1a56eb6",
            "security_group_rule_id": "sgr-03cc6eed156b7aaa1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_security_group.for_ec2_instance",
            "module.compute.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_db_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-677552097",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-011e9d2b05b3604da",
            "security_group_rule_id": "sgr-05036fbd1e6915d38",
            "self": false,
            "source_security_group_id": "sg-0ea9c04a8d1a56eb6",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_security_group.for_ec2_instance",
            "module.compute.module.network.aws_security_group.for_rds_instance",
            "module.compute.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-512970810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ea9c04a8d1a56eb6",
            "security_group_rule_id": "sgr-0949fdd1d5c917bc9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_security_group.for_ec2_instance",
            "module.compute.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3907122156",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ea9c04a8d1a56eb6",
            "security_group_rule_id": "sgr-061f8cd1cfdf233df",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_security_group.for_ec2_instance",
            "module.compute.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "27.3.24.191/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1242921931",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ea9c04a8d1a56eb6",
            "security_group_rule_id": "sgr-04d3f1e19e3356c74",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_security_group.for_ec2_instance",
            "module.compute.module.network.aws_vpc.main",
            "module.compute.module.network.data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-0828d2af7e9f25415",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0828d2af7e9f25415",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-010b76f49cd2e1a27"
          },
          "dependencies": [
            "module.compute.module.network.aws_vpc.main",
            "module.compute.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-0b8c6803ad73b836b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8c6803ad73b836b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-010b76f49cd2e1a27"
          },
          "dependencies": [
            "module.compute.module.network.aws_vpc.main",
            "module.compute.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-005c3e9a5994d8f19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005c3e9a5994d8f19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-010b76f49cd2e1a27"
          },
          "dependencies": [
            "module.compute.module.network.aws_vpc.main",
            "module.compute.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-05013fb3c265e483d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05013fb3c265e483d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-010b76f49cd2e1a27"
          },
          "dependencies": [
            "module.compute.module.network.aws_vpc.main",
            "module.compute.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:vpc/vpc-010b76f49cd2e1a27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d995673abe9cdfc2",
            "default_route_table_id": "rtb-0cdcc5e2cbedb2c0a",
            "default_security_group_id": "sg-07982bff1dc396e51",
            "dhcp_options_id": "dopt-02eda96ab8a8b4350",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010b76f49cd2e1a27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cdcc5e2cbedb2c0a",
            "owner_id": "680885972474",
            "tags": {
              "Name": "container-vpc"
            },
            "tags_all": {
              "Name": "container-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:internet-gateway/igw-0ea8ec56531977637",
            "id": "igw-0ea8ec56531977637",
            "owner_id": "680885972474",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-05949cf82cdc33034"
          },
          "dependencies": [
            "module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:route-table/rtb-09e61fe9fcf048069",
            "id": "rtb-09e61fe9fcf048069",
            "owner_id": "680885972474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea8ec56531977637",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05949cf82cdc33034"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.module.network.aws_internet_gateway.main",
            "module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c974df06d26790f",
            "route_table_id": "rtb-09e61fe9fcf048069",
            "subnet_id": "subnet-0fde73010343af206"
          },
          "dependencies": [
            "module.database.module.network.aws_internet_gateway.main",
            "module.database.module.network.aws_route_table.public",
            "module.database.module.network.aws_subnet.public",
            "module.database.module.network.aws_vpc.main",
            "module.database.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05434ade0939016de",
            "route_table_id": "rtb-09e61fe9fcf048069",
            "subnet_id": "subnet-071c7708df0b1251d"
          },
          "dependencies": [
            "module.database.module.network.aws_internet_gateway.main",
            "module.database.module.network.aws_route_table.public",
            "module.database.module.network.aws_subnet.public",
            "module.database.module.network.aws_vpc.main",
            "module.database.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:security-group/sg-072442b99a331791d",
            "description": "Security Group for FCJ Management",
            "egress": [],
            "id": "sg-072442b99a331791d",
            "ingress": [],
            "name": "FCJ-Management-SG",
            "name_prefix": "",
            "owner_id": "680885972474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "for_ec2_instance"
            },
            "tags_all": {
              "Name": "for_ec2_instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-05949cf82cdc33034"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_rds_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:security-group/sg-06c8f5847efbb8907",
            "description": "Security Group for DB instance",
            "egress": [],
            "id": "sg-06c8f5847efbb8907",
            "ingress": [],
            "name": "FCJ-Management-DB-SG",
            "name_prefix": "",
            "owner_id": "680885972474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "for_rds_instance"
            },
            "tags_all": {
              "Name": "for_rds_instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-05949cf82cdc33034"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_custom_tpc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5000,
            "id": "sgrule-3773322907",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072442b99a331791d",
            "security_group_rule_id": "sgr-01e039f7a3e80f37a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.module.network.aws_security_group.for_ec2_instance",
            "module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_db_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1855918348",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06c8f5847efbb8907",
            "security_group_rule_id": "sgr-08636f2886808831c",
            "self": false,
            "source_security_group_id": "sg-072442b99a331791d",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.module.network.aws_security_group.for_ec2_instance",
            "module.database.module.network.aws_security_group.for_rds_instance",
            "module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3592347427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072442b99a331791d",
            "security_group_rule_id": "sgr-06028285e6350be7d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.module.network.aws_security_group.for_ec2_instance",
            "module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-249957576",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072442b99a331791d",
            "security_group_rule_id": "sgr-0b74391e62f34c175",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.module.network.aws_security_group.for_ec2_instance",
            "module.database.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "27.3.24.191/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2014444992",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072442b99a331791d",
            "security_group_rule_id": "sgr-04dfcb2309850f3f0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database.module.network.aws_security_group.for_ec2_instance",
            "module.database.module.network.aws_vpc.main",
            "module.database.module.network.data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-063d38a238ff811f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063d38a238ff811f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05949cf82cdc33034"
          },
          "dependencies": [
            "module.database.module.network.aws_vpc.main",
            "module.database.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-0de6fff1d88505949",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de6fff1d88505949",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05949cf82cdc33034"
          },
          "dependencies": [
            "module.database.module.network.aws_vpc.main",
            "module.database.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-0fde73010343af206",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fde73010343af206",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05949cf82cdc33034"
          },
          "dependencies": [
            "module.database.module.network.aws_vpc.main",
            "module.database.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-071c7708df0b1251d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071c7708df0b1251d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05949cf82cdc33034"
          },
          "dependencies": [
            "module.database.module.network.aws_vpc.main",
            "module.database.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:vpc/vpc-05949cf82cdc33034",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ec2f22fa970f3fa",
            "default_route_table_id": "rtb-0597a289739b0059d",
            "default_security_group_id": "sg-0ea25abed371809f5",
            "dhcp_options_id": "dopt-02eda96ab8a8b4350",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05949cf82cdc33034",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0597a289739b0059d",
            "owner_id": "680885972474",
            "tags": {
              "Name": "container-vpc"
            },
            "tags_all": {
              "Name": "container-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:internet-gateway/igw-086aed008877f09d8",
            "id": "igw-086aed008877f09d8",
            "owner_id": "680885972474",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-04eb44710e9816e27"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:route-table/rtb-06997ffbf30f4817a",
            "id": "rtb-06997ffbf30f4817a",
            "owner_id": "680885972474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086aed008877f09d8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eb44710e9816e27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05debe4b949104302",
            "route_table_id": "rtb-06997ffbf30f4817a",
            "subnet_id": "subnet-094aec7db7fac1b00"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3ab1792cde21542",
            "route_table_id": "rtb-06997ffbf30f4817a",
            "subnet_id": "subnet-0c2fbeba8fc1c34a8"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:security-group/sg-09d5b82b9d19faf72",
            "description": "Security Group for FCJ Management",
            "egress": [],
            "id": "sg-09d5b82b9d19faf72",
            "ingress": [],
            "name": "FCJ-Management-SG",
            "name_prefix": "",
            "owner_id": "680885972474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "for_ec2_instance"
            },
            "tags_all": {
              "Name": "for_ec2_instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eb44710e9816e27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_rds_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:security-group/sg-020ba40dd16da3423",
            "description": "Security Group for DB instance",
            "egress": [],
            "id": "sg-020ba40dd16da3423",
            "ingress": [],
            "name": "FCJ-Management-DB-SG",
            "name_prefix": "",
            "owner_id": "680885972474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "for_rds_instance"
            },
            "tags_all": {
              "Name": "for_rds_instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eb44710e9816e27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_custom_tpc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5000,
            "id": "sgrule-1567243297",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d5b82b9d19faf72",
            "security_group_rule_id": "sgr-01000fc3e42739929",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.for_ec2_instance",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_db_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3854424443",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020ba40dd16da3423",
            "security_group_rule_id": "sgr-08d5dc97666289278",
            "self": false,
            "source_security_group_id": "sg-09d5b82b9d19faf72",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.for_ec2_instance",
            "module.network.aws_security_group.for_rds_instance",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1933857280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d5b82b9d19faf72",
            "security_group_rule_id": "sgr-0cfadb2a1f24bc459",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.for_ec2_instance",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-591798638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d5b82b9d19faf72",
            "security_group_rule_id": "sgr-03db7b0dc22db1804",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.for_ec2_instance",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "27.3.24.191/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1394091320",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d5b82b9d19faf72",
            "security_group_rule_id": "sgr-0ab12a30fcc378e45",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.for_ec2_instance",
            "module.network.aws_vpc.main",
            "module.network.data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-0c27f0f9ac37f447a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c27f0f9ac37f447a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04eb44710e9816e27"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-02c2cbebf05e7a4cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c2cbebf05e7a4cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04eb44710e9816e27"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-094aec7db7fac1b00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094aec7db7fac1b00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04eb44710e9816e27"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:subnet/subnet-0c2fbeba8fc1c34a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2fbeba8fc1c34a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680885972474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04eb44710e9816e27"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680885972474:vpc/vpc-04eb44710e9816e27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0808f5dbb35a47001",
            "default_route_table_id": "rtb-0aa671fe417a69dbc",
            "default_security_group_id": "sg-05d5b9fcb4ce67811",
            "dhcp_options_id": "dopt-02eda96ab8a8b4350",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04eb44710e9816e27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa671fe417a69dbc",
            "owner_id": "680885972474",
            "tags": {
              "Name": "container-vpc"
            },
            "tags_all": {
              "Name": "container-vpc"
            }
          }
        }
      ]
    }
  ]
}